--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ h1, h2 {
     color: #B73275;
     font-weight: lighter;
 }
+h2 {
+    margin-top: -10;
+}
 
 p, li {
     inline-size: 500px;
@@ -15,10 +18,6 @@ p, li {
 
 li {
     padding: 1.5px;
-}
-
-.image {
-    text-align: center;
 }
 
 .container {
@@ -32,7 +31,6 @@ li {
     padding: 25px;
     width: 225px;
     height: 300px;
-    justify-content: center;
 }
 
 #meme {
