--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ h1, h2 {
     color: #B73275;
     font-weight: lighter;
 }
+
 h2 {
-    margin-top: -10;
+    margin-top: -30px;
 }
 
 p, li {
@@ -28,7 +29,7 @@ li {
 
 #me {
     max-width: 100%;
-    padding: 25px;
+    padding: 15px;
     width: 225px;
     height: 300px;
 }
